# pyops-lab

./: README.md  pyproject.toml
.github/workflows/: test.yml
metrics/: pyproject.toml
metrics/metrics/: percentiles_calculator.py  run.py  test_percentiles_calculator.py  test_uid_analyzer.py  uid_analyzer.py
parsing/: pyproject.toml
parsing/parsing/: file_gap_checker.py  test_file_gap_checker.py
