[tool.poetry]
name = "pyops-lab"
version = "0.1.0"
package-mode = false
description = "Lab project for SRE tasks solved using python"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.workspaces]
members = ["parsing", "metrics"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
