[tool.poetry]
name = "parsing"
version = "0.1.0"
description = "Log parsers, data validation, regex"
packages = [{ include = "parsing" }]
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
